--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ rust-version = "1.80"
 anyhow = "1.0.68"                                # error handling
 bytes = "1.3.0"                                  # helps manage buffers
 thiserror = "1.0.38"                             # error handling
+regex = "1.11.1"
+once_cell = "1.21.3"
